# Secure-Passage

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/secure-passage-core/: Cargo.toml
crates/secure-passage-core/src/: events.rs  lib.rs  vpn.rs
crates/secure-passage-core/src/crypto/: mod.rs
crates/secure-passage-core/src/nym/: mod.rs  service.rs
crates/secure-passage-core/src/protocol/: chat.rs  files.rs  mod.rs
crates/secure-passage-ui/: Cargo.toml
crates/secure-passage-ui/src/: app.rs  main.rs  theme.rs
crates/secure-passage-ui/src/views/: banner.rs  chat.rs  dialogs.rs  files.rs  logs.rs  mod.rs  nav.rs  status.rs
