[workspace]
resolver = "2"
members = [
    "crates/secure-passage-core",
    "crates/secure-passage-ui",
]
default-members = ["crates/secure-passage-ui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Secure Passage"]

[workspace.dependencies]
secure-passage-core = { path = "crates/secure-passage-core" }
nym-sdk = "1.21.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "6"
futures = "0.3"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
eframe = { version = "0.35", default-features = true, features = ["default_fonts", "glow"] }
egui = "0.35"
egui_extras = { version = "0.35", features = ["svg", "file"] }
rfd = "0.15"
arboard = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
