[package]
name = "secure-passage-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nym-sdk = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
