[package]
name = "secure-passage-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "secure-passage"
path = "src/main.rs"

[dependencies]
secure-passage-core = { workspace = true }
tokio = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
rfd = { workspace = true }
arboard = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
